--- a/a.html
+++ b/a.html
@@ -1,1 +1,16 @@
-¨
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Grupo Wbos</title>
+</head>
+<body>
+    <h3> ¿Quienes somos? </h3>
+    <p> Esa pregunta te la responderemos acontinuacion:</p>
+    <img src="calaveraaz_xqvxd9b3.gif" alt="xd">
+
+    <h1> Santino Machado y Morena Stetson   </h1>
+</body>
+</html>
